--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="video-container">
-        <iframe src="https://youtu.be/5U9STSTAG6M?si=zga5CSRjtF_t_VJe" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/watch?v=5U9STSTAG6M&t=202s" frameborder="0" allowfullscreen></iframe>
     </div>
 </body>
 </html>
